<resources>
    <string name="app_name">CameraRing</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_setting_activity">Ajustes</string>

    <!-- Strings Settings -->

    <string name="error_user">Usuario no valido</string>
    <string name="help_user">El usuario solo puede contener alfanumericos</string>
    <string name="input_user">Usuario</string>
    <string name="error_address">Direccion no valida</string>
    <string name="help_address">http://xxx…</string>
    <string name="input_address">Direccion Web</string>
    <string name="error_port">El puerto solo puede ser numerico</string>
    <string name="help_port">xxxx</string>
    <string name="input_port">Puerto</string>
    <string name="error_email">Email</string>
    <string name="help_email">…@(gmail.com)</string>
    <string name="input_email">Introduce un email valido</string>
    <string name="error_phone">El telefono tiene que ser valido</string>
    <string name="help_phone">6xxxxxxxx</string>
    <string name="input_phone">Movil</string>
    <string name="error_pass">La contraseña tiene que ser valida</string>
    <string name="help_pass">Solo caracteres alfanumericos</string>
    <string name="input_pass">Contraseña</string>
    <string name="s_sinformation">Enviar</string>


    <!-- Strings part Functions-->
    <string name="title_activity_functions_system">Funcionalidades</string>
    <string name="title_type1">View Type 1</string>
    <string name="title_type2">View Type 2</string>
    <string name="title_type3">View Type 3</string>
    <string name="content_type1">This is sample data for view type 1</string>
    <string name="content_type2">This is sample data for view type 2 - %d</string>
    <string name="content_type3">This is sample data for view type 3</string>
    <string name="drawable_animal_name">animal%d</string>

    <string name="drawable_info">icon_info_simple</string>
    <string name="f_title_informacion">Informacion Aplicacion</string>
    <string name="f_content_information">Aqui puedes ver toda la info de la aplicacion</string>

    <string name="drawable_settings">black_white_android_settings</string>
    <string name="f_title_settings">Configuracion</string>
    <string name="f_content_settings">Aqui puedes configurar todos los parametros de la aplicacion</string>

    <string name="drawable_photo">photo_add_camera_icon</string>
    <string name="f_title_photo">Haz una captura</string>
    <string name="f_content_photo">Haz click para hacer una captura</string>

    <string name="drawable_video">digital_video</string>
    <string name="f_title_video">Haz un video</string>
    <string name="f_content_video">Puedes realizar un video haciendo click aqui</string>

    <string name="drawable_gallery">gallery_icon_black</string>
    <string name="f_title_gallery">Galeria</string>
    <string name="f_content_gallery">Galeria con las fotos y videos tomadas</string>

    <string name="drawable_audio">icon_mic</string>
    <string name="f_title_audio">Mandar un audio</string>
    <string name="f_content_audio">Haz click para mandar un audio para que se escuche en el telefonillo</string>

    <string name="drawable_streaming">streaming_icon</string>
    <string name="f_title_streaming">Ver camara en Streaming</string>
    <string name="f_content_streaming">Haz click para ver mediante streaming la camara del telefonillo</string>

    <!-- Strings part info -->

    <string name="title_activity_info_app">Informacion</string>
    <string name="inf_title">Aqui podras encontrar toda la informacion de la aplicacion</string>
    <string name="inf_content">\n
        Esta aplicacion esta orientada a trabajar con un sistema servidor domotico.\n
        Con esta aplicacion podremos tener un uso total de toda la funcionalidad que implementa este porterillo automatico.\n\n

        La apliacion esta realizada por Francisco Javier Ruiz De La Torre, como proyecto de Fin de Grado por lo que todavia necesita
        mucho trabajo y mejora en compatibilidad y traduccion.\n\n

        Este codigo esta totalmente libre y se puede hacer uso de el en cualquier momento en el github, si se necesita cualquier ayuda
        o resolver cualquier duda mi correo es fraruide@us.es.
        \n
        \n
        <a href='https://github.com/Pakoke/AplicacionRingTone'>https://github.com/Pakoke/AplicacionRingTone</a>
    </string>

    <!-- Strings part gallery -->
    <string name="title_activity_details">Imagen</string>
    <string name="GalleryActivity">Galeria</string>

    <!-- Strings parts of audio functions -->
    <string name="sound_text_time">Tiempo de grabacion</string>
    <string name="custom_notification">Se ha realizado una llamada a su domicilio</string>
    <string name="collapsed">Llamada en su casa</string>
    <string name="expanded">Esta es la notificacion expandida</string>
    <string name="expanded_image">Two Androids on top of each other. Symbolises an expanded notification.</string>
    <string name="title_activity_streamer_setting">StreamerSetting</string>
    <string name="action_settings">Configuration</string>
    <string name="drawable_audio_list">music_512</string>
    <string name="progress_dialog_saving">Guardando</string>
    <string name="no_space_error">espacio insuficiente</string>
    <string name="write_error">error de escitura</string>
    <string name="too_small_error">no se puede guarda el fichero necesita durar mas</string>
    <string name="alert_ok_button">ok alert</string>
    <string name="alert_title_failure">Fallo</string>
    <string name="save_success_message">guardado correctamente</string>
    <string name="artist_name">Pacoke</string>
    <string name="alert_title_success">Alerta</string>
    <string name="no_unique_filename">fichero no unico</string>

</resources>
