<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:columnCount="1"
    android:rowCount="8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/s_layout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="aplicacionringtone.aplicacionringtone.setting_activity"
    tools:showIn="@layout/setting_activity">

    <com.rey.material.widget.EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/s_user"
        android:theme="@style/Material.Widget.EditText"
        android:hint="@string/input_user"
        app:et_error="@string/error_user"
        app:et_helper="@string/help_user"
        app:et_labelEnable="true"
        app:et_supportMode="helperWithError"
        app:et_supportTextColor="@android:color/background_dark"
        app:et_supportTextAppearance="@android:color/background_dark"
        app:et_labelTextColor="@android:color/background_dark"
        />

    <com.rey.material.widget.EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/s_pass"
        android:theme="@style/Material.Widget.EditText"
        android:hint="@string/input_pass"
        app:et_error="@string/error_pass"
        app:et_helper="@string/help_pass"
        app:et_labelEnable="true"
        app:et_supportMode="helperWithError"
        app:et_supportTextColor="@android:color/background_dark"
        app:et_supportTextAppearance="@android:color/background_dark"
        app:et_labelTextColor="@android:color/background_dark"
        />

    <com.rey.material.widget.EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/s_address"
        android:hint="@string/input_address"
        app:et_error="@string/error_address"
        app:et_helper="@string/help_address"
        app:et_labelEnable="true"
        app:theme="@style/Material.Widget.EditText"
        app:et_supportMode="helperWithError"
        app:et_supportTextColor="@android:color/background_dark"
        app:et_labelTextColor="@android:color/background_dark"
        app:et_supportTextAppearance="@android:color/background_dark"
        />

    <com.rey.material.widget.EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/s_email"
        android:hint="@string/input_email"
        app:et_error="@string/error_email"
        app:et_helper="@string/help_email"
        app:et_supportTextColor="@android:color/background_dark"
        app:et_labelTextColor="@android:color/background_dark"
        app:et_supportTextAppearance="@android:color/background_dark"
        app:et_labelEnable="true"
        app:theme="@style/Material.Widget.EditText"
        app:et_supportMode="helperWithError"
        />
    <com.rey.material.widget.EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/s_phone"
        android:hint="@string/input_phone"
        app:et_error="@string/error_phone"
        app:et_helper="@string/help_phone"
        app:et_supportTextColor="@android:color/background_dark"
        app:et_labelTextColor="@android:color/background_dark"
        app:et_supportTextAppearance="@android:color/background_dark"
        app:et_labelEnable="true"
        app:theme="@style/Material.Widget.EditText"
        app:et_supportMode="helperWithError"
        />

    <com.rey.material.widget.Spinner
        style="@style/Material.Widget.Spinner"
        android:layout_width="129dp"
        android:layout_height="44dp"
        android:id="@+id/s_spinner"
        android:layout_rowSpan="2"
        app:rd_style="@style/Material.Drawable.Ripple.Wave"
        />

    <com.rey.material.widget.Button
        style="@style/Material.Drawable.Ripple.Wave"
        android:layout_width="129dp"
        android:layout_height="44dp"
        android:text="@string/s_sinformation"
        android:id="@+id/s_sinformation"
        app:rd_enable="true"/>

    <com.rey.material.widget.ProgressView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/s_progressbar"
        app:pv_autostart="false"
        app:pv_circular="false"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress"
        app:pv_progressMode="indeterminate"
        />

</GridLayout>
